# private-registry-pip-toml

./: pyproject.toml
.github/: dependabot.yml
